# automations

./: .env  .env.template  .gitignore  automations.service  config.toml  pyproject.toml  python3-automation.service  requirements.txt  setup.py
automation/: config.py  main.py  typem.py
scripts/: archive.sh  cleanup.sh  cleanup.sh.template  cleanup.sql  domotiq-archive  domotiq-cleanup  domotiq-snapshot  domotiq.archive  domotiq.cleanup  snapshot.sh
src/: automations.py  config.py  db.py  main.py  tasks.py  typem.py
src/automations/: archive.py  automations.py  config.py  db.py  main.py  snapshot.py  tasks.py  typem.py
utils/: domotiq
