[project]
name = "automations"
dynamic = ["version"]
description = "Home automations."
authors = [{ name = "Franck Barbenoire", email = "fbarbenoire@gmail.com" }]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.12.14",
    "aiomqtt==2.4.0",
    "aiosmtplib==4.0.1",
    "aiosqlite==0.21.0",
    "python-dotenv==1.1.1"
]
# license = "GPL-3.0-or-later"
keywords = ["home automation", "automations"]

[project.urls]
Homepage = "https://github.com/domotik-or/automations"

[build-system]
requires = ["flit_core >=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
automations = "automations.main:main"
snapshot = "automations.snapshot:main"

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
